init minimal style

--- a/en/about.html
+++ b/en/about.html
@@ -1,19 +1,19 @@
 <!DOCTYPE HTML>
-<html cd=1>
+<html cd=1 id=About...>
 <head>
   <title>Sanny Builder</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link rel="stylesheet" type="text/css" href="../style/style2.css">
+  <link rel="stylesheet" type="text/css" href="../style/style.css">
 </head>
 <body>
+<script src="../js/partial/header.js"></script>
 
-<h2>Sanny Builder</h2>
-<p>Sanny Builder is a fast and powerful tool designed for the GTA 3D game series (GTA3, VC, SA; partially LCS and VCS).</p>
+<p>Sanny Builder is a fast and powerful tool designed for the GTA 3D game series (GTA3, VC, SA, LCS; partially VCS).</p>
 
 <p>It includes a disassembler, permitting the end-user to transform the game scripts into text. The compiler feature offers a convenient editor with a large number of useful functions such as syntax highlighting, error checking, advanced search tools, player coordinates reading, fast movement through code and much more.</p>
 
-<p>Sanny offers an advanced code syntax which is similar to existing programming languages. This syntax includes changeable classes, keywords and high-level statements. We recommend you continue reading and fully explore the help section to learn more about SB and its capabilities. We provide a wealth of information that will help you get started in mission coding. Now that you have discovered some of the possibilities.</p>
+<p>Sanny offers an advanced code syntax which is similar to existing programming languages. This syntax includes changeable classes, keywords and high-level statements. We recommend you continue reading and fully explore the help section to learn more about SB and its capabilities. We provide a wealth of information that will help you get started in mission coding.</p>
 
 <h3>Supported Games</h3>
 <table>
@@ -21,7 +21,7 @@
 <tr><td>GTA III</td><td>+</td><td>+</td></tr>
 <tr><td>GTA VC</td><td>+</td><td>+</td></tr>
 <tr><td>GTA SA</td><td>+</td><td>+</td></tr>
-<tr><td>GTA LCS</td><td>+</td><td>-</td></tr>
+<tr><td>GTA LCS</td><td>+</td><td>+</td></tr>
 <tr><td>GTA VCS</td><td>+</td><td>-</td></tr>
 </table>
 
@@ -37,11 +37,11 @@
 \lcs - run as LCS editor<br>
 \vcs - run as VCS editor<br>
 \sa_mobile - run as SA Mobile editor.<br>
-<p class="note">You can change the <a href="edit_modes.html">current edit mode</a> in run-time.</p>
-\debug - <a href="console.html#DEBUG">enables the debug options</a><br>
+<p class="note">You can change the <a href="edit_modes.htm">current edit mode</a> in run-time.</p>
+\debug - <a href="console.htm#DEBUG">enables the debug options</a><br>
 \compile input_file_path [output_file_path] - run compilation in hidden mode at the program startup<br>
 <p class="note">Example: \compile C:\myscm.txt C:\myscm.scm<br>
-An <span class="i">output_file_path</span> parameter is optional. If there is no path specified for an output file, the compiler uses <a href="O_102.html#name_formats">name formats</a>. Pay attention that the source file must have no errors. If at compilation there will be errors, they will be logged in the file compile.log. When compilation ends, the program shuts down.</p>
+An <span class="i">output_file_path</span> parameter is optional. If there is no path specified for an output file, the compiler uses <a href="O_102.htm#name_formats">name formats</a>. Pay attention that the source file must have no errors. If at compilation there will be errors, they will be logged in the file compile.log. When compilation ends, the program shuts down.</p>
 \nosplash - run the program without the startup screen
 
 <h3>Credits</h3>
@@ -49,11 +49,13 @@ An <span class="i">output_file_path</span> parameter is optional. If there is no
 <p>SynEdit &copy; SynEdit Team<br><a href="http://synedit.sourceforge.net" target="_blank">http://synedit.sourceforge.net</a></p>
 <p>CHM file made with help of <a href="http://yelmi.com" target="_blank">yelmi</a> and Xieon.</p>
 <p>Sanny Builder on the web:<br>
-<a href="http://sannybuilder.com" target="_blank">http://sannybuilder.com</a><br>
+<a href="https://sannybuilder.com" target="_blank">sannybuilder.com</a><br>
 <a href="https://twitter.com/SannyBuilderDev" target="_blank">Sanny Builder @ Twitter</a><br>
 <a href="https://facebook.com/SannyBuilder" target="_blank">Sanny Builder @ Facebook</a><br>
 <a href="http://gtaforums.com/index.php?showtopic=211077" target="_blank">Sanny Builder @ GTAForums.com</a><br></p>
-<p>For any questions use e-mail <a href="mailto:mail@sannybuilder.com">mail@sannybuilder.com</a></p>
+<p>For any questions contact by e-mail <a href="mailto:mail@sannybuilder.com">mail@sannybuilder.com</a></p>
 <p>Use it at your own risk. In Backup We Trust.</p>
 <p>Best regards, Seemann.</p>
-<p>Copyright &copy; 2005-2015 Seemann</p>
+<p>Copyright &copy; 2005-2019 Seemann</p>
+
+</body></html>
