--- a/en/coding.html
+++ b/en/coding.html
@@ -8,21 +8,18 @@
 </head>
 <body>
 <script src="../js/partial/header.js"></script>
-<p>
 
-<h2>Coding</h2>
-<ul class='l1'>
-<li><a href="coding.data_types.html">Data types</a></li>
-<li><a href="coding.variables.html">Variables</a></li>
-<li><a href="coding.loops.html">Constants</a></li>
-<li><a href="coding.arrays.html">Arrays</a></li>
-<li><a href="coding.conditions.html">Conditions</a></li>
-<li><a href="coding.loops.html">Loops</a></li>
-<li><a href="coding.classes.html">Classes</a></li>
-<li><a href="coding.keywords.html">Keywords</a></li>
-<li><a href="coding.additional.html">Additional commands</a></li>
-<li><a href="coding.hex_end.html">HEX..END</a></li>
-<li><a href="coding.directives.html">Directives</a></li>
+<ul>
+<li><a href="coding/data_types.html">Data types</a></li>
+<li><a href="coding/variables.html">Variables</a></li>
+<li><a href="coding/loops.html">Constants</a></li>
+<li><a href="coding/arrays.html">Arrays</a></li>
+<li><a href="coding/conditions.html">Conditions</a></li>
+<li><a href="coding/loops.html">Loops</a></li>
+<li><a href="coding/classes.html">Classes</a></li>
+<li><a href="coding/keywords.html">Keywords</a></li>
+<li><a href="coding/additional.html">Additional commands</a></li>
+<li><a href="coding/hex_end.html">HEX..END</a></li>
+<li><a href="coding/directives.html">Directives</a></li>
 </ul>
 </p>
-<script src="../js/partial/footer.js"></script>
