--- a/en/about.html
+++ b/en/about.html
@@ -47,7 +47,7 @@ An <span class="i">output_file_path</span> parameter is optional. If there is no
 <h3>Credits</h3>
 <p>Delphi 7.0 Ent. &copy; Borland Software Corp<br><a href="http://www.borland.com" target="_blank">http://www.borland.com</a></p>
 <p>SynEdit &copy; SynEdit Team<br><a href="http://synedit.sourceforge.net" target="_blank">http://synedit.sourceforge.net</a></p>
-<p>CHM file made with help of <a href="http://yelmi.com" target="_blank">yelmi</a> and Xieon.</p>
+<p>CHM file made with help of <a href="http://yelmi.com" target="_blank">yelmi</a>, Xieon and <a href="https://matidragon-yt.github.io/page/" target="_blank">MatiDragon</a>.</p>
 <p>Sanny Builder on the web:<br>
 <a href="https://sannybuilder.com" target="_blank">sannybuilder.com</a><br>
 <a href="https://twitter.com/SannyBuilderDev" target="_blank">Sanny Builder @ Twitter</a><br>
