from HTML to Markdown

--- a/en/coding.html
+++ b/en/coding.html
@@ -9,17 +9,16 @@
 <body>
 <script src="../js/partial/header.js"></script>
 
-<ul>
-<li><a href="coding/data_types.html">Data types</a></li>
-<li><a href="coding/variables.html">Variables</a></li>
-<li><a href="coding/loops.html">Constants</a></li>
-<li><a href="coding/arrays.html">Arrays</a></li>
-<li><a href="coding/conditions.html">Conditions</a></li>
-<li><a href="coding/loops.html">Loops</a></li>
-<li><a href="coding/classes.html">Classes</a></li>
-<li><a href="coding/keywords.html">Keywords</a></li>
-<li><a href="coding/additional.html">Additional commands</a></li>
-<li><a href="coding/hex_end.html">HEX..END</a></li>
-<li><a href="coding/directives.html">Directives</a></li>
-</ul>
-</p>
+* [Data types](coding/data_types.html)
+* [Variables](coding/variables.html)
+* [Constants](coding/loops.html)
+* [Arrays](coding/arrays.html)
+* [Conditions](coding/conditions.html)
+* [Loops](coding/loops.html)
+* [Classes](coding/classes.html)
+* [Keywords](coding/keywords.html)
+* [Additional commands](coding/additional.html)
+* [HEX..END](coding/hex_end.html)
+* [Directives](coding/directives.html)
+
+<script src="../js/markdown.js"></script>
