--- a/en/articles.html
+++ b/en/articles.html
@@ -8,13 +8,9 @@
 </head>
 <body>
 <script src="../js/partial/header.js"></script>
-<p>
-<h2>Articles</h2>
 
-<ul>
-<li><a href="articles11.html">Mission Coding with Sanny Builder Tutorial Part I</a></li>
-<li><a href="articles2.html">Mission Coding with Sanny Builder Tutorial Part II</a></li>
-</ul>
+- Mission Coding with Sanny Builder
+| [Tutorial Part I](articles/mcp1.html)
+| [Tutorial Part II](articles/mcp2.html)
 
-</p>
-<script src="../js/partial/footer.js"></script>
+<script src="../js/markdown.js"></script>
