--- a/en/editor.html
+++ b/en/editor.html
@@ -8,22 +8,16 @@
 </head>
 <body>
 <script src="../js/partial/header.js"></script>
-<p>
-<h2>Editor</h2>
-<ul class='l1'>
-<li><a href="O_100.html">Options</a>
-  <ul class='l2'>
-    <li><a href="O_101.html">General</a></li>
-    <li><a href="O_102.html">Formats</a></li>
-    <li><a href="O_103.html">Editor</a></li>
-    <li><a href="O_104.html">Highlighter</a></li>
-    <li><a href="O_105.html">Hotkeys</a></li>
-  </ul>
-</li>
-<li><a href="features.html">Features</a></li>
-<li><a href="console.html">Console</a></li>
-<li><a href="hotkeys.html">Hotkeys</a></li>
-<li><a href="opcode_search.html"> Opcode Search Tool</a></li></li>
-</ul>
-</p>
-<script src="../js/partial/footer.js"></script>
+
+- [Options](O_100.html)
+| [General](O_101.html)
+| [Formats](O_102.html)
+| [Editor](O_103.html)
+| [Highlighter](O_104.html)
+| [Hotkeys](O_105.html)
+- [Features](features.html)
+- [Console](console.html)
+- [Hotkeys](hotkeys.html)
+- [Opcode Search Tool](opcode_search.html)
+
+<script src="../js/markdown.js"></script>
