--- a/en/about.html
+++ b/en/about.html
@@ -4,6 +4,7 @@
   <title>Introduction</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="../style/style.css">
 </head>
 <body>
@@ -25,9 +26,9 @@ Latest versions and updates are always available on [sannybuilder.com](https://s
 
 ### Contacts
 
-[sannybuilder.com](https://sannybuilder.com)<br>
-[Sanny Builder @ Twitter](https://twitter.com/SannyBuilderDev)<br>
-[Sanny Builder @ Facebook](https://facebook.com/SannyBuilder)<br>
+[sannybuilder.com](https://sannybuilder.com)\
+[Sanny Builder @ Twitter](https://twitter.com/SannyBuilderDev)\
+[Sanny Builder @ Facebook](https://facebook.com/SannyBuilder)\
 [Sanny Builder @ GTAForums.com](http://gtaforums.com/index.php?showtopic=211077)
 .
 For any questions e-mail me at [mail@sannybuilder.com](mailto:mail@sannybuilder.com) or create a ticket on [GitHub](https://github.com/sannybuilder/dev/issues).
