--- a/en/coding.html
+++ b/en/coding.html
@@ -4,21 +4,22 @@
   <title>Coding</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="../style/style.css">
 </head>
 <body>
 <script src="../js/partial/header.js"></script>
 
-* [Data types](coding/data_types.html)
-* [Variables](coding/variables.html)
-* [Constants](coding/loops.html)
-* [Arrays](coding/arrays.html)
-* [Conditions](coding/conditions.html)
-* [Loops](coding/loops.html)
-* [Classes](coding/classes.html)
-* [Keywords](coding/keywords.html)
-* [Additional commands](coding/additional.html)
-* [HEX..END](coding/hex_end.html)
-* [Directives](coding/directives.html)
+- [Data types](coding/data_types.html)
+- [Variables](coding/variables.html)
+- [Constants](coding/loops.html)
+- [Arrays](coding/arrays.html)
+- [Conditions](coding/conditions.html)
+- [Loops](coding/loops.html)
+- [Classes](coding/classes.html)
+- [Keywords](coding/keywords.html)
+- [Additional commands](coding/additional.html)
+- [HEX..END](coding/hex_end.html)
+- [Directives](coding/directives.html)
 
 <script src="../js/markdown.js"></script>
