--- a/en/coding/classes.html
+++ b/en/coding/classes.html
@@ -8,153 +8,186 @@
 </head>
 <body>
 <script src="../../js/partial/header.js"></script>
-<p>
-<b>Basic Concepts</b>
-<p>Sanny Builder allows you to use classes in the  code.&nbsp; Class is a group of opcodes applied to in-game objects: player,  actor, object, etc.</p>
-<p>   Each class has a set of commands (class members). They can be split
-	into the following groups:</p>
-<ul>
-	<li> conditional opcodes
-	<li>regular opcodes (methods)
-	<li>properties
-</ul>
-<hr>
-<b>
-		Conditional Commands</b>
 
-<p>
-Conditional commands are marked with the word 'Check' in the resizable
-	window that is displayed when you press Ctrl+Space. Many of these have only the parameter:  the class owner handle (name).<br><br>
+A **class** is a group of commands applied to the in-game entities: player, peds, objects, etc. For example, the `Player` class groups the commands performed over the player character.
 
-	Example:</p>
-<div  class="imgcursor" align="right"><span class="kbd"><img src="img/en/ico_cb.gif" alt="Copy to Clipboard" width="16" height="16"  onClick="ClipBoard();"  ></span>
-<TEXTAREA ID="holdtext" STYLE="display:none;"></TEXTAREA></div>
-<div class=mycode5>
-<pre id="copytext" class="NON"><span class="general1-reservedword">if</span>
-<span class="general1-class">Player</span>.<span class="general1-command">Defined</span>(<span class="general1-variable">$PLAYER_CHAR</span>)
-<span class="general1-reservedword">jf</span> <span class="general1-label">@anywhere</span></pre></div>
-<p><br>
-  <span class="general1-class">Player</span> - class name<br>
-	<span class="general1-command">Defined</span> - class member<br>
-	<span class="general1-variable">$PLAYER_CHAR</span> - class owner</p>
-<hr>
+## General Syntax
 
-		<b>	Regular Commands (methods)</b>
-        <p>Regular (procedural) commands are used to complete  a single in-game action: move an object, destroy this one and so on.&nbsp; A special kind of these commands is the  constructor that creates an object (an actor, a car) and stores its handle to a  variable.<br><br>
-	In SB the constructor can be used either as method or property:</p>
-<div  class="imgcursor" align="right"><span class="kbd"><img src="img/en/ico_cb.gif" alt="Copy to Clipboard" width="16" height="16"  onClick="ClipBoard1();"  ></span>
-<TEXTAREA ID="holdtext1" STYLE="display:none;"></TEXTAREA></div>
-<div class=mycode5>
-<pre id="copytext1" class="NON"><span class="general1-class">Player</span>.<span class="general1-command">Create</span>(<span class="general1-variable">$PLAYER_CHAR</span>, <span class="general1-model">#NULL</span>, <span class="general1-number">2488.5601</span>, <span class="general1-number">-1666.84</span>, <span class="general1-number">13.38</span>) - procedure
-<span class="general1-variable">$PLAYER_CHAR</span> = <span class="general1-class">Player</span>.<span class="general1-command">Create</span>(<span class="general1-model">#NULL</span>, <span class="general1-number">2488.5601</span>, <span class="general1-number">-1666.84</span>, <span class="general1-number">13.38</span>) - constructor</pre></div>
-<p>These create the same effect.
-</p>
+Syntax:\
+```sb3
+&lt;Class name&gt;.&lt;Class member&gt;(parameters)
+```
 
-<hr>
+`Class name` - the name of a group of commands defined in the `classes.db` file for this edit mode\
+`Class member` - one of the commands included in the class\
+`Parameters` - 0 or more comma-delimited [parameters](data-types.md)
 
-		<b>Properties</b>
-<p>Property allows you to read/write values to the class fields.<br><br>
+```sb3
+Player.SetMinWantedLevel($PLAYER_CHAR, 2)
+```
 
-	Example: <br>
-	Property 'Money' of the class 'Player' allows to operate with the
-	following opcodes:</p>
-<div  class="imgcursor" align="right"><span class="kbd"><img src="img/en/ico_cb.gif" alt="Copy to Clipboard" width="16" height="16"  onClick="ClipBoard2();"  ></span>
-<TEXTAREA ID="holdtext2" STYLE="display:none;"></TEXTAREA></div>
-<div class=mycode5>
-<pre id="copytext2" class="NON">0109: player <span class="general1-variable">$PLAYER_CHAR</span> money += <span class="general1-number">1000000</span>
-010A:   player <span class="general1-variable">$PLAYER_CHAR</span> money > <span class="general1-variable">461@</span>
-010B: <span class="general1-variable">4@</span> = player <span class="general1-variable">$PLAYER_CHAR</span> money</pre></div>
-<p>
-   With the property you can use the following commands without any opcodes:</p>
-<div  class="imgcursor" align="right"><span class="kbd"><img src="img/en/ico_cb.gif" alt="Copy to Clipboard" width="16" height="16"  onClick="ClipBoard3();"  ></span>
-<TEXTAREA ID="holdtext3" STYLE="display:none;"></TEXTAREA></div>
-<div class=mycode5>
-<pre id="copytext3" class="NON">player(<span class="general1-variable">$PLAYER_CHAR</span>).<span class="general1-command">Money</span> += <span class="general1-number">1000000</span>
-player(<span class="general1-variable">$PLAYER_CHAR</span>).<span class="general1-command">Money</span> &gt; <span class="general1-variable">461@</span>
-<span class="general1-variable">4@</span> = player(<span class="general1-variable">$PLAYER_CHAR</span>).<span class="general1-command">Money</span></pre>
+`Player` - class name\
+`SetMinWantedLevel` - class member\
+`$PLAYER_CHAR, 2` - two parameters for `SetMinWantedLevel`
+
+There are three types of class members:
+
+* conditions
+* methods
+* properties
+
+### Conditions
+
+The list that appears when you press `Ctrl+Space` marks conditional commands with the word `Check`. They are used in [conditional expressions](conditions.md): 
+
+```sb3
+if
+    Player.Defined($PLAYER_CHAR)
+jf @anywhere
+```
+
+### Methods
+
+Methods are regular commands used to complete a single in-game action, e.g. moving an object, destroying a vehicle, etc.:
+
+```sb3
+Object.PutAt($crate, 10.0, -25.5, 12.2)
+Car.Destroy($car)
+```
+
+They are marked with the work `proc` in the list of class members.
+
+A special kind of methods is a constructor. A constructor creates a new instance of a class and stores its handle to a variable.
+
+In Sanny Builder the constructor can be written in two equivalent ways:
+
+```sb3
+Player.Create($PLAYER_CHAR, #NULL, 2488.5601, -1666.84, 13.38)
+
+```
+
+```sb3
+$PLAYER_CHAR = Player.Create(#NULL, 2488.5601, -1666.84, 13.38)
+```
+
+### Properties
+
+Property allows you to access class attributes and/or modify them.
+
+For example, the `.Money` property of the `Player` class allows to operate with the amount of money of the player:
+
+```sb3
+Player($PLAYER_CHAR).Money += 1000000 // add more money
+Player($PLAYER_CHAR).Money > 461@ // check the amount
+4@ = Player($PLAYER_CHAR).Money // read the amount and store in variable
+```
+
+
+<div class="warning">
+In the current version the compiler ignores whitespace characters in [string literals](data-types.md#string-literals) used in property parameters:
+
+```sb3
+0@ = File.Open("file name","wb")
+```
+
+will be compiled as:
+
+```sb3
+0@ = File.Open("filename","wb")
+```
 </div>
-<p>Note: that you make DIFFERENT actions using the ONLY command.
-</p>
-<a name="propertystringlimit"></a><p>In the current version there is a limit on using space characters in the string literals used as a parameter in a property. The compiler ignores these characters. For example, the command</p>
-<DIV class=mycode5><span class="general1-variable">0@</span> =  <span class="general1-class">File</span>.<span class="general1-command">Open</span>(<span class="general1-string">"file name"</span>,<span class="general1-string">"wb"</span>)</div>
-<p>will be compiled as</p>
-<DIV class=mycode5><span class="general1-variable">0@</span> =  <span class="general1-class">File</span>.<span class="general1-command">Open</span>(<span class="general1-string">"filename"</span>,<span class="general1-string">"wb"</span>)</div>
-<hr>
+## Class Instances
 
-		<b>Class Members</b>
-        <p>There is a possibility of initializing the variables  as class members to use them instead of class names.<br>
-          <br>
-Example:</p>
-<div  class="imgcursor" align="right"><span class="kbd"><img src="img/en/ico_cb.gif" alt="Copy to Clipboard" width="16" height="16"  onClick="ClipBoard4();"  ></span>
-<TEXTAREA ID="holdtext4" STYLE="display:none;"></TEXTAREA></div>
-<div class=mycode5>
-<pre id="copytext4" class="NON"><span class="general1-reservedword">var</span>
-<span class="general1-variable">$PLAYER_CHAR</span>: Player
-<span class="general1-reservedword">end</span></pre></div>
-<p>
-It declares the variable $PLAYER_CHAR as member of the class 'Player'. <br>
-	So, the variable can be used instead of the class name Player:</p>
-<div  class="imgcursor" align="right"><span class="kbd"><img src="img/en/ico_cb.gif" alt="Copy to Clipboard" width="16" height="16"  onClick="ClipBoard5();"  ></span>
-<TEXTAREA ID="holdtext5" STYLE="display:none;"></TEXTAREA></div>
-<div class=mycode5>
-<pre id="copytext5" class="NON"><span class="general1-reservedword">if</span>
-<span class="general1-variable">$PLAYER_CHAR</span>.<span class="general1-command">Defined</span>
-<span class="general1-reservedword">jf</span> <span class="general1-label">@anywhere</span></pre></div>
-<p>Pay attention that such variables are compiled as the first parameter and therefore, do not duplicate them.</p>
-<div  class="imgcursor" align="right"><span class="kbd"><img src="img/en/ico_cb.gif" alt="Copy to Clipboard" width="16" height="16"  onClick="ClipBoard6();"  ></span>
-<TEXTAREA ID="holdtext6" STYLE="display:none;"></TEXTAREA></div>
-<div class=mycode5>
-<pre id="copytext6" class="NON"><span class="general1-class">Player</span>.<span class="general1-command">SetClothes</span>(<span class="general1-variable">$PLAYER_CHAR</span>, <span class="general1-string">"PLAYER_FACE"</span>, <span class="general1-string">"HEAD"</span>, Head)
-=
-<span class="general1-variable">$PLAYER_CHAR</span>.<span class="general1-command">SetClothes</span>(<span class="general1-string">"PLAYER_FACE"</span>, <span class="general1-string">"HEAD"</span>, Head))</pre></div>
-<p>
-   These variables can be redeclared with another type.
+Almost all class members take a variable as the first parameter. This variable holds a handle of the class instance which is a concrete in-game entity the command is applied to:
 
-</p>
-<hr>
+```sb3
+Player.Build($PLAYER_CHAR)
+```
 
-		<b>'Model' Class</b>
-        <p>
-The model identifiers are always the members of the 'Model' class. <br>
-You can reference this class using their names:</p>
-<div  class="imgcursor" align="right"><span class="kbd"><img src="img/en/ico_cb.gif" alt="Copy to Clipboard" width="16" height="16"  onClick="ClipBoard7();"  ></span>
-<TEXTAREA ID="holdtext7" STYLE="display:none;"></TEXTAREA></div>
-<div class=mycode5>
-<pre id="copytext7" class="NON"><span class="general1-model">#AK47</span>.<span class="general1-command">Load</span>
+<code class=variables>$PLAYER_CHAR</code> - the class instance. 
 
-<span class="general1-label">:loop</span>
-<span class="general1-reservedword">wait</span> <span class="general1-number">0</span>
-<span class="general1-reservedword">if</span>
-<span class="general1-model">#AK47</span>.<span class="general1-command">Available</span>
-<span class="general1-reservedword">jf</span> <span class="general1-label">@loop</span></pre></div>
-<p>	It is the same as:</p>
+For some in-game entities there is only one instance to exist. An example of that would be the camera that controls what the player can see. The members of classes for such entities do not require a variable with the class instance:
 
-<div  class="imgcursor" align="right"><span class="kbd"><img src="img/en/ico_cb.gif" alt="Copy to Clipboard" width="16" height="16"  onClick="ClipBoard8();"  ></span>
-<TEXTAREA ID="holdtext8" STYLE="display:none;"></TEXTAREA></div>
-<div class=mycode5>
-<pre id="copytext8" class="NON"><span class="general1-class">Model</span>.<span class="general1-command">Load</span>(<span class="general1-model">#AK47</span>)
+```sb3
+Camera.SetBehindPlayer()
+```
 
-<span class="general1-label">:loop</span>
-<span class="general1-reservedword">wait</span> <span class="general1-number">0</span>
-<span class="general1-reservedword">if</span><br>
-<span class="general1-class">Model</span>.<span class="general1-command">Available</span>(<span class="general1-model">#AK47</span>)
-<span class="general1-reservedword">jf</span> <span class="general1-label">@loop</span></pre></div>
+### Declaring a class instance
 
-<br><hr>
+Variables can be [declared](variables.md#var-end-construct) using a class name as the type:
 
-		<b>Extended Parameters (class constants)</b>
-        <p>Some classes use parameters with special  names.&nbsp; This possibility makes the source  code more readable.<br><br>
+```sb3
+var
+    $PLAYER_CHAR: Player
+end
+```
 
-	Example:</p>
-<div  class="imgcursor" align="right"><span class="kbd"><img src="img/en/ico_cb.gif" alt="Copy to Clipboard" width="16" height="16"  onClick="ClipBoard9();"  ></span>
-<TEXTAREA ID="holdtext9" STYLE="display:none;"></TEXTAREA></div>
-<div class=mycode5>
-<pre id="copytext9" class="NON"><span class="general1-class">Player</span>.<span class="general1-command">SetClothes</span>(<span class="general1-variable">$PLAYER_CHAR</span>, <span class="general1-string">"VEST"</span>, <span class="general1-string">"VEST"</span>, Torso)</pre></div>
-<p>Last parameter (Torso) is the class constant that will be&nbsp; replaced with  the number 0 at compilation.<br><br>
-  These parameters are defined in the file 'classes.db'.<br>
-  <br>
+It instructs the compiler that <code class=variables>$PLAYER_CHAR</code> holds an instance of the class <code class=classes>Player</code>. This variable can serve as an alias to the class name:
 
-For convenience, a list of extended parameters are displayed when you press  Ctrl+Space.&nbsp; Simply place the cursor where there  should be an extended parameter,&nbsp;  press ctrl+space and the parameters list will be displayed. <br>
-You can then select a name from it and insert this into your code.
-</p>
-<script src="../../js/partial/footer.js"></script>
+```
+if
+    $PLAYER_CHAR.Defined
+jf @anywhere
+```
+
+<div class="warning">
+If a variable substitutes a class name, the compiler also makes it the first parameter, hence no need to use it again in the list of parameters:
+
+```sb3
+$PLAYER_CHAR.SetClothes("PLAYER_FACE", "HEAD", Head)
+```
+
+is equivalent to:
+
+```sb3
+Player.SetClothes($PLAYER_CHAR, "PLAYER_FACE", "HEAD", Head)
+```
+</div>
+
+Variables declared as instances of a class can be redeclared with another type.
+
+### The `Model` Class 
+
+[Model names](data-types.md#model-names) are always instances of the `Model` class:
+
+```
+#AK47.Load
+  
+:loop
+wait 0
+if
+  #AK47.Available
+jf @loop
+```
+
+It is equivalent to:
+
+```
+Model.Load(#AK47)
+
+:loop
+wait 0
+if
+    Model.Available(#AK47)
+jf @loop
+```
+
+## Class constants
+
+Class parameters can be assigned to an [enumerated type](../edit-modes/enums.txt.md). It makes the source code more readable:
+
+```
+Player.SetClothes($PLAYER_CHAR, "VEST", "VEST", BodyPart.Torso)
+```
+
+The last parameter (`BodyPart.Torso`) is a member of the `BodyPart` enum substituted with `0` during compilation.  The enums and values are defined in the `enums.txt` file.
+
+#### Extended parameters (deprecated)
+
+Sanny Builder prior to v3.6 defined special constants for class members in the file `classes.db` . These parameters were called extended. This solution only allowed for one extended parameter per class member. 
+
+Since v3.6 class members use enum names as their types and may have any number of enumerated parameters. 
+
+For backward compatibility Sanny Builder still supports old extended parameters during compilation.  `classes.db` keeps them under the `DEPRECATED_ENUMS` section.
+
+<script src="../../js/markdown.js"></script>
