--- a/en/scm.html
+++ b/en/scm.html
@@ -4,20 +4,21 @@
   <title>SCM Documentation</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="../style/style.css">
 </head>
 <body>
 <script src="../js/partial/header.js"></script>
-<p>
+
 Contents:
-<ul>
-<li><a href="GTA_INI.html">Opcodes list (ini)</a></li>
-<li><a href="SCMHELPGTALIMIT.html">GTA Limits</a></li>
-<li><a href="SCMHELP02.html">GTA SA</a></li>
-<li><a href="SCMHELP03.html">GTA VC</a></li>
-<li><a href="SCMHELP04.html">GTA LCS</a></li>
-</ul>
-Help materials by:<br>
-alexander aka alexander koryakin, barton waterduck, bigun, deezire, opius, pdescobar, san'ok aka alexander golovnev, seemann, spaceeinstein, spinnie, xieon, wesser, <a href="http://www.lzfdownloads.de/index.php?page=46&action=text#1" target="_blank">http://www.lzfdownloads.de/</a>
-</p>
-<script src="../js/partial/footer.js"></script>
+
+- [Opcodes list (ini)](GTA_INI.html)
+- [GTA Limits](SCMHELPGTALIMIT.html)
+- [GTA SA](SCMHELP02.html)
+- [GTA VC](SCMHELP03.html)
+- [GTA LCS](SCMHELP04.html)
+
+Help materials by:\
+alexander aka alexander koryakin, barton waterduck, bigun, deezire, opius, pdescobar, san'ok aka alexander golovnev, seemann, spaceeinstein, spinnie, xieon, wesser, <a href="http://www.lzfdownloads.de/index.php?page=46&action=text#1">lzfdownloads.de</a>
+
+<script src="../js/markdown.js"></script>
