--- a/en/coding/comments.html
+++ b/en/coding/comments.html
@@ -17,10 +17,10 @@ To comment out multiple lines or a part of the line, use block comments `{}`:
 0001: wait {comments here} 0 ms
 ```
 
-Since version 3.06 Sanny Builder also supports the C++-like comments `/&#x002A; &#x002A;/`.
+Since version 3.06 Sanny Builder also supports the C++-like comments `/* */`.
 
 ```sb3
-0001: wait /&#x002A; comments here &#x002A;/ 0 ms
+0001: wait /* comments here */ 0 ms
 ```
 
 To comment out or uncomment multiple selected lines of the code press `Ctrl+Q` (this hotkey is configurable in the [options](../editor/options/hotkeys.md)).
