--- a/en/scm-documentation/README.html
+++ b/en/scm-documentation/README.html
@@ -1,23 +1,19 @@
 <!DOCTYPE HTML>
-<html cd=1>
+<html>
 <head>
   <title>SCM Documentation</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="../style/style.css">
+  <link rel="stylesheet" type="text/css" href="../../style/style.css">
 </head>
 <body>
 
-Contents:
+[GTA Limits](gta-limits.html)\
+[GTA III](gta3\README.html)\
+[GTA SA](sa\README.html)\
+[GTA VC](vc\README.html)\
+[GTA VCS](vcs\README.html)\
+[GTA LCS](lcs\README.html)
 
-- [Opcodes list (ini)](GTA_INI.html)
-- [GTA Limits](SCMHELPGTALIMIT.html)
-- [GTA SA](SCMHELP02.html)
-- [GTA VC](SCMHELP03.html)
-- [GTA LCS](SCMHELP04.html)
-
-Help materials by:\
-alexander aka alexander koryakin, barton waterduck, bigun, deezire, opius, pdescobar, san'ok aka alexander golovnev, seemann, spaceeinstein, spinnie, xieon, wesser, <a href="http://www.lzfdownloads.de/index.php?page=46&action=text#1">lzfdownloads.de</a>
-
-<script src="../js/markdown.js"></script>
+<script src="../../js/markdown.js"></script>
